--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 jwt.secret=CapeElectricSoftwareDivision
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.profiles.active=@activatedProperties@
+spring.profiles.active=@activatedProperties@
 #use your db credentials for logging
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/lv_safety_verification
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=CapeElectricSoftware@2021
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 server.port=5005
 app.email.disable=Y
